--- a/mealie/config.json
+++ b/mealie/config.json
@@ -9,9 +9,9 @@
   "description": "Mealie is a self hosted recipe manager and meal planner with a RestAPI backend and a reactive frontend application built in Vue for a pleasant user experience for the whole family",
   "environment": {
     "DB_ENGINE": "sqlite",
-    "APP_PORT": "9925"
+    "APP_PORT": "8099"
   },
-  "ingress": false,
+  "ingress": true,
   "ingress_port": 8099,
   "map": [
     "share:rw",
@@ -25,7 +25,7 @@
   },
   "panel_icon": "mdi:silverware-fork-knife",
   "ports": {
-    "9925/tcp": "9925"
+    "8099/tcp": "8099"
   },
   "ports_description": {
     "80/tcp": "Web interface"
